fix(style): a little styling to borders and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
     grid-column-start: 2;
     grid-row-start: 2;
     justify-self: center;
-    border: 2px solid black;
+        border: 2px solid black;
 }
 
 .hidden{
@@ -25,7 +25,7 @@ body{
 }        
 nav{
     background-color: rgb(255, 251, 245);
-
+    margin-top:10px;
 }
 .my_btn:hover{
     transform: scale(1.1) !important;
